--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     
     <div id="nav-section">
         <nav>
-            <div class="brand-name">
-                <span>Brand Name</span>
+            <div class="brand-name nav-div">
+                <p>Brand Name</p>
             </div>
-            <div id="nav-links">
+            <div id="nav-links" class="nav-div">
                 <a href="#home" class="nav-link">HOME</a>
                 <a href="#about" class="nav-link">ABOUT ME</a>
                 <a href="#projects" class="nav-link">PROJECTS</a>
@@ -172,7 +172,7 @@
                 </div>
                 <div class="project-description">
                     <p>Lorem ipsum dsd dsds dsdsadsadsad
-                        accusantium. Debitis, fugiat?</p>
+                        accusantium. sdasd dsaadsad dsdasd dasdsad dsaad sadsad sdas dsa dsad sa dsd   dsdasdsafd s dsd sdsad dsad asdsad  as  Debitis, fugiat?</p>
                     </div>
                 </div>
                 <div class="project">
