--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         <div id="project-container">
             <div class="project">
                 <a class="project-link" href="https://jeffs0412.github.io/note-taking-app/" target="_blank">
-                    <img src="https://inbio-react.netlify.app/static/a6d273d704eb2200c0d6fc5c67bc85df/d0f18/portfolio-02.webp"
+                    <img src="images/Frame 1.jpg"
                     alt="View Source Code">
                 </a>
                 <div class="project-name">
@@ -177,7 +177,7 @@
                 </div>
                 <div class="project">
                     <a class="project-link" href="https://jeffs0412.github.io/random-quote-generator/" target="_blank">
-                        <img src="https://inbio-react.netlify.app/static/a6d273d704eb2200c0d6fc5c67bc85df/d0f18/portfolio-02.webp"
+                        <img src="images/Frame 2.png"
                         alt="View Source Code">
                     </a>
                     <div class="project-name">
