--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"> -->
+    <script src="https://kit.fontawesome.com/b0510e7ddb.js" crossorigin="anonymous"></script>
     <title>Personal Website</title>
 </head>
 
@@ -43,7 +44,7 @@
                     </div>
                 </div>
                 <div id="home-slogan">
-                    <p class="line-1 anim-typewriter">A self-taught web developer.</p>
+                    <p class="line-1 anim-typewriter">A self-taught Web Developer.</p>
                 </div>
                 <div id="home-intro">
                     <p>I use animation as a third dimension by which to simplify experiences and kuiding thro each and
@@ -74,7 +75,7 @@
     <!-- ABOUT SECTION -->
     <div id="about">
         <div id="skill-header">
-            <h4>What can I do</h4>
+            <h1>SKILLS</h1>
         </div>
         <div id="skills">
             <div class="skill">
@@ -175,7 +176,7 @@
     <!-- PROJECTS SECTION  -->
     <div id="projects">
         <div id="projects-header">
-            <h1>My Projects</h1>
+            <h1>PROJECTS</h1>
         </div>
         <div id="project-container">
             <div class="project">
@@ -266,7 +267,7 @@
     </div>
     <div id="contacts">
         <div id="contacts-header">
-            <h1>Contact Details</h1>
+            <h1>CONTACT DETAILS</h1>
         </div>
         <div id="contacts-container">
             <div id="contact-description">
@@ -279,7 +280,7 @@
                         <i class="fas fa-phone"></i>
                     </div>
                     <div class="contact-label">
-                        <p>PHONE</p>
+                        <p>Contact Phone Number</p>
                     </div>
                     <div class="contact-details">
                         <p>+639954686995</p>
@@ -312,7 +313,7 @@
                 </div>
             </div>
         </div>
-        <div id="socials">
+        <footer id="socials">
             <div class="social">
                 <a class="fa-brands fa-linkedin" href="https://www.linkedin.com/in/jefferson-manale/"
                     target="_blank"></a>
@@ -326,7 +327,7 @@
                     target="_blank">
                 </a>
             </div>
-        </div>
+        </footer>
     </div>
     </main>
     <script src="script.js"></script>
