Update HTML & CSS

--- a/index.html
+++ b/index.html
@@ -53,15 +53,15 @@
                 </div>
                 <div id="home-socials">
                     <div class="home-social">
-                        <a class="fa-brands fa-linkedin" href="https://www.linkedin.com/in/jefferson-manale/"
-                            target="_blank"></a>
+                        <a class="fa-brands fa-linkedin" title="Visit Linkedin Profile"
+                            href="https://www.linkedin.com/in/jefferson-manale/" target="_blank"></a>
                     </div>
                     <div class="home-social">
-                        <a class="fa-brands fa-github" href="https://github.com/Jeffs0412" target="_blank"></a>
+                        <a class="fa-brands fa-github" title="Visit GitHub Profile"
+                            href="https://github.com/Jeffs0412" target="_blank"></a>
                     </div>
                     <div class="home-social">
-                        <a class="fa-sharp fa-solid fa-envelope"
-                            href="https://mail.google.com/mail/u/0/#search/manalejefferson%40gmail.com?compose=new"
+                        <a class="fa-sharp fa-solid fa-envelope" title="Email" href="mailto:manalejefferson@gmail.com"
                             target="_blank">
                         </a>
                     </div>
@@ -185,7 +185,7 @@
                 </a>
                 <div class="project-name">
                     <p class="name">Note Taking App</p>
-                    <a href="https://github.com/Jeffs0412/note-taking-app" class="fab fa-github" target="_blank"></a>
+                    <a href="https://github.com/Jeffs0412/note-taking-app" title="Visit GitHub Repository" class="fab fa-github" target="_blank"></a>
                 </div>
                 <div class="project-description">
                     <p>Lorem ipsum dsd dsds dsdsadsadsad
@@ -199,7 +199,7 @@
                 </a>
                 <div class="project-name">
                     <p class="name">Random Quote Generator</p>
-                    <a href="https://github.com/Jeffs0412/random-quote-generator" class="fab fa-github"
+                    <a href="https://github.com/Jeffs0412/random-quote-generator" title="Visit GitHub Repository" class="fab fa-github"
                         target="_blank"></a>
                 </div>
                 <div class="project-description">
@@ -223,8 +223,7 @@
             </div>
             <div class="project">
                 <a class="project-link" href="">
-                    <img src="images/Screenshot 2023-05-20 215115.jpg"
-                        alt="View Source Code">
+                    <img src="images/Screenshot 2023-05-20 215115.jpg" alt="View Source Code">
                 </a>
                 <div class="project-name">
                     <p class="name">Project 3 Name</p>
@@ -272,7 +271,9 @@
         <div id="contacts-container">
             <div id="contact-description">
                 <p>There are many variations of passages of Lorem Ipsum available,
-                    but the majority have suffered alteration. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas autem facilis eum neque iure ea. Velit non sunt corrupti libero quisquam quas, eius nulla. Itaque mollitia vitae aliquid dolorem maiores!</p>
+                    but the majority have suffered alteration. Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                    Quas autem facilis eum neque iure ea. Velit non sunt corrupti libero quisquam quas, eius nulla.
+                    Itaque mollitia vitae aliquid dolorem maiores!</p>
             </div>
             <div id="contact-container">
                 <div class="contact">
@@ -283,8 +284,7 @@
                         <p>Contact Phone Number</p>
                     </div>
                     <div class="contact-details">
-                        <p>+639954686995</p>
-                        <p>+639954686995</p>
+                        <p>+63 995 468 6995</p>
                     </div>
                 </div>
                 <div class="contact">
@@ -295,11 +295,10 @@
                         <p>Email</p>
                     </div>
                     <div class="contact-details">
-                        <p>Detail 1</p>
-                        <p>Detail 2</p>
+                        <p>manalejefferson@gmail.com</p>
                     </div>
                 </div>
-                <div class="contact">
+                <!-- <div class="contact">
                     <div class="contact-icon">
                         <i class="fas fa-envelope"></i>
                     </div>
@@ -310,21 +309,19 @@
                         <p>Detail 1</p>
                         <p>Detail 2</p>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
         <footer id="socials">
             <div class="social">
-                <a class="fa-brands fa-linkedin" href="https://www.linkedin.com/in/jefferson-manale/"
+                <a class="fa-brands fa-linkedin" title="Visit Linkedin Profile" href="https://www.linkedin.com/in/jefferson-manale/"
                     target="_blank"></a>
             </div>
             <div class="social">
-                <a class="fa-brands fa-github" href="https://github.com/Jeffs0412" target="_blank"></a>
+                <a class="fa-brands fa-github" title="Visit GitHub Profile" href="https://github.com/Jeffs0412" target="_blank"></a>
             </div>
             <div class="social">
-                <a class="fa-sharp fa-solid fa-envelope"
-                    href="https://mail.google.com/mail/u/0/#search/manalejefferson%40gmail.com?compose=new"
-                    target="_blank">
+                <a class="fa-sharp fa-solid fa-envelope" title="Email" href="mailto:manalejefferson@gmail.com" target="_blank">
                 </a>
             </div>
         </footer>
