feat: features added

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"> -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
     <script src="https://kit.fontawesome.com/b0510e7ddb.js" crossorigin="anonymous"></script>
     <title>Personal Website</title>
 </head>
@@ -57,8 +58,8 @@
                             href="https://www.linkedin.com/in/jefferson-manale/" target="_blank"></a>
                     </div>
                     <div class="home-social">
-                        <a class="fa-brands fa-github" title="Visit GitHub Profile"
-                            href="https://github.com/Jeffs0412" target="_blank"></a>
+                        <a class="fa-brands fa-github" title="Visit GitHub Profile" href="https://github.com/Jeffs0412"
+                            target="_blank"></a>
                     </div>
                     <div class="home-social">
                         <a class="fa-sharp fa-solid fa-envelope" title="Email" href="mailto:manalejefferson@gmail.com"
@@ -80,94 +81,53 @@
         <div id="skills">
             <div class="skill">
                 <div class="skill-content">
-
                     <div class="skill-icon">
-                        <img src="images/html.png" alt="">
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" />
                     </div>
-                    <div class="skill-name">
-                        <p>HTML</p>
+                    <p class="skill-name">
+                        HTML
+                    </p>
+                </div>
+            </div>
+            <div class="skill">
+                <div class="skill-content">
+                    <div class="skill-icon">
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" />
                     </div>
-                    <div class="skill-description">
-                        <p>Lorem ipsum dolor sit amet vel neque, voluptas deserunt nostrum distinctio perferendis quasi
-                            aspernatur veniam tenetur animi asperiores libero sapiente ea,</p>
-                    </div>
+                    <p class="skill-name">
+                        CSS
+                    </p>
                 </div>
             </div>
             <div class="skill">
                 <div class="skill-content">
 
                     <div class="skill-icon">
-                        <img src="images/css-3.png" alt="">
+                        <img
+                            src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" />
                     </div>
-                    <div class="skill-name">
-                        <p>CSS</p>
-                    </div>
-                    <div class="skill-description">
-                        <p>hdbashdbsdbshdbsd Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas error
-                            laboriosam expedita dicta veritatis, optio quo libero nobis corporis </p>
-                    </div>
+                    <p class="skill-name">
+                        JAVASCRIPT
+                    </p>
                 </div>
             </div>
             <div class="skill">
                 <div class="skill-content">
 
                     <div class="skill-icon">
-                        <img src="images/js.png" alt="">
+                        <img
+                            src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/postgresql/postgresql-original.svg" />
                     </div>
-                    <div class="skill-name">
-                        <p>JavaScript</p>
-                    </div>
-                    <div class="skill-description">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt quidem nemo laborum ea
-                            culpa qui excepturi reiciendis, esse gvcfgcfgcgf</p>
-                    </div>
+                    <p class="skill-name">SQL</p>
                 </div>
             </div>
             <div class="skill">
                 <div class="skill-content">
 
                     <div class="skill-icon">
-                        <img src="images/php.png" alt="">
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/bash/bash-original.svg" />
                     </div>
-                    <div class="skill-name">
-                        <p>PHP</p>
-                    </div>
-                    <div class="skill-description">
-                        <p> sit amet consectetur adipisicing elit. Velit quaerat quos laboriosam repudiandae incidunt
-                            aliquid laudantium molestias nihil? Saepe similique </p>
-                    </div>
-                </div>
-            </div>
-            <div class="skill">
-                <div class="skill-content">
-
-                    <div class="skill-icon">
-                        <img src="images/database.png" alt="">
-                    </div>
-                    <div class="skill-name">
-                        <p>SQL</p>
-                    </div>
-                    <div class="skill-description">
-                        <p>Lorem ipsum dolor Nemo praesentium magnam voluptate numquam vel, reprehenderit saepe,
-                            blanditiis </p>
-                    </div>
-                </div>
-            </div>
-            <div class="skill">
-                <div class="skill-content">
-
-                    <div class="skill-icon">
-                        <img src="images/kisspng-bash-shell-script-command-line-interface-z-shell-5b3df572212d73.0687702015307871861359.png"
-                            alt="">
-                    </div>
-                    <div class="skill-name">
-                        <p>Bash</p>
-                    </div>
-                    <div class="skill-description">
-                        <p> sit amet consectetur adipisicing elit. Velit quaerat quos laboriosam repudiandae incidunt
-                            aliquid laudantium eaque provident.
-                            Molestias veritatis odit eos minus!</p>
-                    </div>
+                    <p class="skill-name">BASH</p>
                 </div>
             </div>
         </div>
@@ -181,11 +141,12 @@
         <div id="project-container">
             <div class="project">
                 <a class="project-link" href="https://jeffs0412.github.io/note-taking-app/" target="_blank">
-                    <img src="images/Frame 1.png" alt="View Source Code">
+                    <img src="images/note-app.jpg" alt="View Source Code">
                 </a>
                 <div class="project-name">
                     <p class="name">Note Taking App</p>
-                    <a href="https://github.com/Jeffs0412/note-taking-app" title="Visit GitHub Repository" class="fab fa-github" target="_blank"></a>
+                    <a href="https://github.com/Jeffs0412/note-taking-app" title="Visit GitHub Repository"
+                        class="fab fa-github" target="_blank"></a>
                 </div>
                 <div class="project-description">
                     <p>Lorem ipsum dsd dsds dsdsadsadsad
@@ -195,16 +156,17 @@
             </div>
             <div class="project">
                 <a class="project-link" href="https://jeffs0412.github.io/random-quote-generator/" target="_blank">
-                    <img src="images/Frame 2.png" alt="View Source Code">
+                    <img src="images/random-quote.jpg" alt="View Source Code">
                 </a>
                 <div class="project-name">
                     <p class="name">Random Quote Generator</p>
-                    <a href="https://github.com/Jeffs0412/random-quote-generator" title="Visit GitHub Repository" class="fab fa-github"
-                        target="_blank"></a>
+                    <a href="https://github.com/Jeffs0412/random-quote-generator" title="Visit GitHub Repository"
+                        class="fab fa-github" target="_blank"></a>
                 </div>
                 <div class="project-description">
-                    <p>Lorem ipsum dolor sit amet, tenetur. Eaque iste qui, ipsa illum nisi explicabo cupiditate
-                        expedita accusantium. Debitis, fugiat?</p>
+                    <p>Lorem ipsum dsd dsds dsdsadsadsad
+                        accusantium. sdasd dsaadsad dsdasd dasdsad dsaad sadsad sdas dsa dsad sa dsd dsdasdsafd s dsd
+                        sdsad dsad asdsad as Debitis, fugiat?</p>
                 </div>
             </div>
             <div class="project">
@@ -314,14 +276,16 @@
         </div>
         <footer id="socials">
             <div class="social">
-                <a class="fa-brands fa-linkedin" title="Visit Linkedin Profile" href="https://www.linkedin.com/in/jefferson-manale/"
+                <a class="fa-brands fa-linkedin" title="Visit Linkedin Profile"
+                    href="https://www.linkedin.com/in/jefferson-manale/" target="_blank"></a>
+            </div>
+            <div class="social">
+                <a class="fa-brands fa-github" title="Visit GitHub Profile" href="https://github.com/Jeffs0412"
                     target="_blank"></a>
             </div>
             <div class="social">
-                <a class="fa-brands fa-github" title="Visit GitHub Profile" href="https://github.com/Jeffs0412" target="_blank"></a>
-            </div>
-            <div class="social">
-                <a class="fa-sharp fa-solid fa-envelope" title="Email" href="mailto:manalejefferson@gmail.com" target="_blank">
+                <a class="fa-sharp fa-solid fa-envelope" title="Email" href="mailto:manalejefferson@gmail.com"
+                    target="_blank">
                 </a>
             </div>
         </footer>
