Update HTML & CSS

--- a/index.html
+++ b/index.html
@@ -9,18 +9,10 @@
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"> -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
     <script src="https://kit.fontawesome.com/b0510e7ddb.js" crossorigin="anonymous"></script>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/18.2.0/umd/react.production.min.js"
-        integrity="sha512-8Q6Y9XnTbOE+JNvjBQwJ2H8S+UV4uA6hiRykhdtIyDYZ2TprdNmWOUaKdGzOhyr4dCyk287OejbPvwl7lrfqrQ=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/18.2.0/umd/react-dom.production.min.js"
-        integrity="sha512-MOCpqoRoisCTwJ8vQQiciZv0qcpROCidek3GTFS6KTk2+y7munJIlKCVkFCYY+p3ErYFXCjmFjnfTTRSC1OHWQ=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/7.22.2/babel.min.js"
-        integrity="sha512-rUDTH31VB+8J7AHYHS5T5aYQ/UNsrd9Euwr15gLRdolbyPc565P9UvFfwC38THDVsgASQc2xVpKyGUZ0EpPR+A=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-
-    <title>Portfolio Website</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/18.2.0/umd/react.production.min.js" integrity="sha512-8Q6Y9XnTbOE+JNvjBQwJ2H8S+UV4uA6hiRykhdtIyDYZ2TprdNmWOUaKdGzOhyr4dCyk287OejbPvwl7lrfqrQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/18.2.0/umd/react-dom.production.min.js" integrity="sha512-MOCpqoRoisCTwJ8vQQiciZv0qcpROCidek3GTFS6KTk2+y7munJIlKCVkFCYY+p3ErYFXCjmFjnfTTRSC1OHWQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/7.22.2/babel.min.js" integrity="sha512-rUDTH31VB+8J7AHYHS5T5aYQ/UNsrd9Euwr15gLRdolbyPc565P9UvFfwC38THDVsgASQc2xVpKyGUZ0EpPR+A==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>  
+  <title>Portfolio Website</title>
 </head>
 
 <body>
@@ -31,10 +23,10 @@
                 <p>Brand Name</p>
             </div>
             <div id="nav-links" class="nav-div">
-                <!-- <a href="#home" class="nav-link">HOME</a>
+                <a href="#home" class="nav-link">HOME</a>
                 <a href="#about" class="nav-link">ABOUT ME</a>
                 <a href="#projects" class="nav-link">PROJECTS</a>
-                <a href="#contacts" class="nav-link">CONTACT</a> -->
+                <a href="#contacts" class="nav-link">CONTACT</a>
             </div>
         </nav>
         <main>
@@ -90,7 +82,7 @@
             <h1>SKILLS</h1>
         </div>
         <div id="skills">
-            <div class="skill">
+            <!-- <div class="skill">
                 <div class="skill-content">
                     <div class="skill-icon">
                         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-plain.svg" />
@@ -162,7 +154,7 @@
                     </div>
                     <p class="skill-name">Git</p>
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
     <hr>
