--- a/src/index.html
+++ b/src/index.html
@@ -54,11 +54,11 @@
         </div>
     </main>
 
-    <script type="text/babel" src="home.js"></script>
     <script type="text/babel" src="navigation.js"></script>
-    <script type="text/babel" src="projects.js"></script>
-    <script type="text/babel" src="contacts.js"></script>
-    <script type="text/babel" src="skills.js"></script>
+    <script type="text/babel" src="components/home.js"></script>
+    <script type="text/babel" src="components/projects.js"></script>
+    <script type="text/babel" src="components/contacts.js"></script>
+    <script type="text/babel" src="components/skills.js"></script>
 </body>
 
 </html>
