--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
     <script src="https://kit.fontawesome.com/b0510e7ddb.js" crossorigin="anonymous"></script>
@@ -54,11 +54,11 @@
         </div>
     </main>
 
-    <script type="text/babel" src="navigation.js"></script>
-    <script type="text/babel" src="components/home.js"></script>
-    <script type="text/babel" src="components/projects.js"></script>
-    <script type="text/babel" src="components/contacts.js"></script>
-    <script type="text/babel" src="components/skills.js"></script>
+    <script type="text/babel" src="js/navigation.js"></script>
+    <script type="text/babel" src="js/components/home.js"></script>
+    <script type="text/babel" src="js/components/projects.js"></script>
+    <script type="text/babel" src="js/components/contacts.js"></script>
+    <script type="text/babel" src="js/components/skills.js"></script>
 </body>
 
 </html>
