--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <script type="text/babel" src="src/js/components/home.js"></script>
     <script type="text/babel" src="src/js/components/projects.js"></script>
     <script type="text/babel" src="src/js/components/contacts.js"></script>
-    <script type="text/babel" src="src/js/components/skills.js"></script>
+    <script type="text/babel" src="src/js/components/about.js"></script>
 </body>
 
 </html>
