feat: home.js headline update

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div id="nav-section">
         <nav>
             <div class="brand-name nav-div">
-                <p>Brand Name</p>
+                <p>Portfolio</p>
             </div>
             <div id="nav-links" class="nav-div">
                 <a href="#home" class="nav-link">HOME</a>
